--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Automation" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <!-- Customize if needed -->
+    <style name="Theme.Automation" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Disable edge-to-edge -->
+        <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+        <item name="android:statusBarColor">@android:color/black</item>
+        <item name="android:navigationBarColor">@android:color/black</item>
     </style>
 
 </resources>
